--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-<video style="position:absolute;top:50px;left:600px" id="myVideo" autoPlay>
+<video style="position:absolute;top:50px;left:600px" id="myVideo" controls>
         <source src="webVid.mp4" type="video/mp4">
       </video>
 
